# math-evaluate

./: .gitignore  README.md  main.py  pyproject.toml  tests.py
.github/workflows/: python-package.yml
